// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Pagination > CustomMaxPages story should render 1`] = `
<div
  className="space-y-4"
>
  <div
    className="flex items-center justify-center gap-2 flex-wrap"
  >
    <button
      className="px-4 py-2 rounded-lg bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600 disabled:opacity-50 disabled:cursor-not-allowed transition-colors"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Previous
    </button>
    <button
      className="px-4 py-2 rounded-lg transition-colors bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600"
      onClick={[Function]}
      type="button"
    >
      2
    </button>
    <button
      className="px-4 py-2 rounded-lg transition-colors bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600"
      onClick={[Function]}
      type="button"
    >
      3
    </button>
    <button
      className="px-4 py-2 rounded-lg transition-colors bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600"
      onClick={[Function]}
      type="button"
    >
      4
    </button>
    <button
      className="px-4 py-2 rounded-lg transition-colors bg-blue-600 text-white"
      onClick={[Function]}
      type="button"
    >
      5
    </button>
    <button
      className="px-4 py-2 rounded-lg transition-colors bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600"
      onClick={[Function]}
      type="button"
    >
      6
    </button>
    <button
      className="px-4 py-2 rounded-lg transition-colors bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600"
      onClick={[Function]}
      type="button"
    >
      7
    </button>
    <button
      className="px-4 py-2 rounded-lg transition-colors bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600"
      onClick={[Function]}
      type="button"
    >
      8
    </button>
    <button
      className="px-4 py-2 rounded-lg bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600 disabled:opacity-50 disabled:cursor-not-allowed transition-colors"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Next
    </button>
  </div>
  <div
    className="text-center text-sm text-gray-500"
  >
    Page 
    5
     of 
    20
  </div>
</div>
`;

exports[`Pagination > Default story should render 1`] = `
<div
  className="space-y-4"
>
  <div
    className="flex items-center justify-center gap-2 flex-wrap"
  >
    <button
      className="px-4 py-2 rounded-lg bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600 disabled:opacity-50 disabled:cursor-not-allowed transition-colors"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Previous
    </button>
    <button
      className="px-4 py-2 rounded-lg transition-colors bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600"
      onClick={[Function]}
      type="button"
    >
      3
    </button>
    <button
      className="px-4 py-2 rounded-lg transition-colors bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600"
      onClick={[Function]}
      type="button"
    >
      4
    </button>
    <button
      className="px-4 py-2 rounded-lg transition-colors bg-blue-600 text-white"
      onClick={[Function]}
      type="button"
    >
      5
    </button>
    <button
      className="px-4 py-2 rounded-lg transition-colors bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600"
      onClick={[Function]}
      type="button"
    >
      6
    </button>
    <button
      className="px-4 py-2 rounded-lg transition-colors bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600"
      onClick={[Function]}
      type="button"
    >
      7
    </button>
    <button
      className="px-4 py-2 rounded-lg bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600 disabled:opacity-50 disabled:cursor-not-allowed transition-colors"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Next
    </button>
  </div>
  <div
    className="text-center text-sm text-gray-500"
  >
    Page 
    5
     of 
    10
  </div>
</div>
`;

exports[`Pagination > FewPages story should render 1`] = `
<div
  className="space-y-4"
>
  <div
    className="flex items-center justify-center gap-2 flex-wrap"
  >
    <button
      className="px-4 py-2 rounded-lg bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600 disabled:opacity-50 disabled:cursor-not-allowed transition-colors"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Previous
    </button>
    <button
      className="px-4 py-2 rounded-lg transition-colors bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600"
      onClick={[Function]}
      type="button"
    >
      1
    </button>
    <button
      className="px-4 py-2 rounded-lg transition-colors bg-blue-600 text-white"
      onClick={[Function]}
      type="button"
    >
      2
    </button>
    <button
      className="px-4 py-2 rounded-lg transition-colors bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600"
      onClick={[Function]}
      type="button"
    >
      3
    </button>
    <button
      className="px-4 py-2 rounded-lg bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600 disabled:opacity-50 disabled:cursor-not-allowed transition-colors"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Next
    </button>
  </div>
  <div
    className="text-center text-sm text-gray-500"
  >
    Page 
    2
     of 
    3
  </div>
</div>
`;

exports[`Pagination > FirstPage story should render 1`] = `
<div
  className="space-y-4"
>
  <div
    className="flex items-center justify-center gap-2 flex-wrap"
  >
    <button
      className="px-4 py-2 rounded-lg bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600 disabled:opacity-50 disabled:cursor-not-allowed transition-colors"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      Previous
    </button>
    <button
      className="px-4 py-2 rounded-lg transition-colors bg-blue-600 text-white"
      onClick={[Function]}
      type="button"
    >
      1
    </button>
    <button
      className="px-4 py-2 rounded-lg transition-colors bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600"
      onClick={[Function]}
      type="button"
    >
      2
    </button>
    <button
      className="px-4 py-2 rounded-lg transition-colors bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600"
      onClick={[Function]}
      type="button"
    >
      3
    </button>
    <button
      className="px-4 py-2 rounded-lg transition-colors bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600"
      onClick={[Function]}
      type="button"
    >
      4
    </button>
    <button
      className="px-4 py-2 rounded-lg transition-colors bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600"
      onClick={[Function]}
      type="button"
    >
      5
    </button>
    <button
      className="px-4 py-2 rounded-lg bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600 disabled:opacity-50 disabled:cursor-not-allowed transition-colors"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Next
    </button>
  </div>
  <div
    className="text-center text-sm text-gray-500"
  >
    Page 
    1
     of 
    10
  </div>
</div>
`;

exports[`Pagination > LastPage story should render 1`] = `
<div
  className="space-y-4"
>
  <div
    className="flex items-center justify-center gap-2 flex-wrap"
  >
    <button
      className="px-4 py-2 rounded-lg bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600 disabled:opacity-50 disabled:cursor-not-allowed transition-colors"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Previous
    </button>
    <button
      className="px-4 py-2 rounded-lg transition-colors bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600"
      onClick={[Function]}
      type="button"
    >
      6
    </button>
    <button
      className="px-4 py-2 rounded-lg transition-colors bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600"
      onClick={[Function]}
      type="button"
    >
      7
    </button>
    <button
      className="px-4 py-2 rounded-lg transition-colors bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600"
      onClick={[Function]}
      type="button"
    >
      8
    </button>
    <button
      className="px-4 py-2 rounded-lg transition-colors bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600"
      onClick={[Function]}
      type="button"
    >
      9
    </button>
    <button
      className="px-4 py-2 rounded-lg transition-colors bg-blue-600 text-white"
      onClick={[Function]}
      type="button"
    >
      10
    </button>
    <button
      className="px-4 py-2 rounded-lg bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600 disabled:opacity-50 disabled:cursor-not-allowed transition-colors"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      Next
    </button>
  </div>
  <div
    className="text-center text-sm text-gray-500"
  >
    Page 
    10
     of 
    10
  </div>
</div>
`;

exports[`Pagination > ManyPages story should render 1`] = `
<div
  className="space-y-4"
>
  <div
    className="flex items-center justify-center gap-2 flex-wrap"
  >
    <button
      className="px-4 py-2 rounded-lg bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600 disabled:opacity-50 disabled:cursor-not-allowed transition-colors"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Previous
    </button>
    <button
      className="px-4 py-2 rounded-lg transition-colors bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600"
      onClick={[Function]}
      type="button"
    >
      23
    </button>
    <button
      className="px-4 py-2 rounded-lg transition-colors bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600"
      onClick={[Function]}
      type="button"
    >
      24
    </button>
    <button
      className="px-4 py-2 rounded-lg transition-colors bg-blue-600 text-white"
      onClick={[Function]}
      type="button"
    >
      25
    </button>
    <button
      className="px-4 py-2 rounded-lg transition-colors bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600"
      onClick={[Function]}
      type="button"
    >
      26
    </button>
    <button
      className="px-4 py-2 rounded-lg transition-colors bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600"
      onClick={[Function]}
      type="button"
    >
      27
    </button>
    <button
      className="px-4 py-2 rounded-lg bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600 disabled:opacity-50 disabled:cursor-not-allowed transition-colors"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Next
    </button>
  </div>
  <div
    className="text-center text-sm text-gray-500"
  >
    Page 
    25
     of 
    50
  </div>
</div>
`;

exports[`Pagination > SinglePage story should render (null) 1`] = `null`;

exports[`Pagination > WithoutPageInfo story should render 1`] = `
<div
  className="space-y-4"
>
  <div
    className="flex items-center justify-center gap-2 flex-wrap"
  >
    <button
      className="px-4 py-2 rounded-lg bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600 disabled:opacity-50 disabled:cursor-not-allowed transition-colors"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Previous
    </button>
    <button
      className="px-4 py-2 rounded-lg transition-colors bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600"
      onClick={[Function]}
      type="button"
    >
      3
    </button>
    <button
      className="px-4 py-2 rounded-lg transition-colors bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600"
      onClick={[Function]}
      type="button"
    >
      4
    </button>
    <button
      className="px-4 py-2 rounded-lg transition-colors bg-blue-600 text-white"
      onClick={[Function]}
      type="button"
    >
      5
    </button>
    <button
      className="px-4 py-2 rounded-lg transition-colors bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600"
      onClick={[Function]}
      type="button"
    >
      6
    </button>
    <button
      className="px-4 py-2 rounded-lg transition-colors bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600"
      onClick={[Function]}
      type="button"
    >
      7
    </button>
    <button
      className="px-4 py-2 rounded-lg bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600 disabled:opacity-50 disabled:cursor-not-allowed transition-colors"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Next
    </button>
  </div>
</div>
`;
